# Checkers

./: CMakeLists.txt  checkers.cpp  checkers.h
libraries/: sfml-audio.lib  sfml-graphics.lib  sfml-network.lib  sfml-window.lib
resources/images/: Deklaracja NNW Edukacja OC Nauczycieli - załącznik 2 (4) .docx  Deklaracja NNW Edukacja OC Nauczycieli - załącznik 2 (4).docx
sources/Controller/: Controller.cpp  Controller.h
sources/Model/: Board.cpp  Board.h  Model.cpp  Model.h  Player.h
sources/View/: View.cpp  View.h
