# CMakeList.txt : CMake project for checkers, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("checkers")

# Add source to this project's executable.
add_executable (checkers "checkers.cpp" "checkers.h")

# TODO: Add tests and install targets if needed.
